fixed the overlap of the ggplot and the warnings via css

--- a/shiny-explore-dataset/www/custom.css
+++ b/shiny-explore-dataset/www/custom.css
@@ -34,3 +34,8 @@
     margin-left: 0px;
     padding-left: 0px;
 }
+
+.shiny-plot-output {
+    height: 100% !important;
+    margin-bottom: 10px;
+}
